# waywarm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
packaging/: waywarm.service
src/: cli.rs  config.rs  conflict.rs  daemon.rs  gamma.rs  gui.rs  ipc.rs  lib.rs  main.rs  protocol.rs  schedule.rs  service.rs  service_tui.rs  tray.rs  tui.rs  ui_common.rs
tests/: install.sh
