[package]
name = "waywarm"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A simple Wayland blue-light filter with a friendly TUI"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libc = "0.2"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.9"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = "thin"
strip = true
